--- a/hotel-booking-system/pom.xml
+++ b/hotel-booking-system/pom.xml
@@ -114,10 +114,9 @@
 			<version>2.4</version>
 		</dependency>
 		<dependency>
-			<groupId>com.jayway.jsonpath</groupId>
-			<artifactId>json-path</artifactId>
-			<version>2.0.0</version>
-			<scope>test</scope>
+			<groupId>com.fasterxml.jackson.jaxrs</groupId>
+			<artifactId>jackson-jaxrs-base</artifactId>
+			<version>2.6.3</version>
 		</dependency>
 	</dependencies>
 </project>
