--- a/hotel-booking-system/pom.xml
+++ b/hotel-booking-system/pom.xml
@@ -118,5 +118,10 @@
 			<artifactId>jackson-jaxrs-base</artifactId>
 			<version>2.6.3</version>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.0.2.GA</version>
+		</dependency> -->
 	</dependencies>
 </project>
